# tp_hw_1

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md
.github/workflow/: ci.yml
.github/workflows/: CCI.yml
demo/: CMakeLists.txt  main.c
scripts/: checks.sh  coverage.sh  linters.sh  push_report.sh  static_analyze.sh  tests.sh
src/: CMakeLists.txt
src/int_array/: CMakeLists.txt
src/int_array/include/: int_array.h
src/int_array/sources/: int_array.c
src/progression_finder/: CMakeLists.txt
src/progression_finder/include/: progression_finder.h
src/progression_finder/sources/: progression_finder.c
src/ui/: CMakeLists.txt
src/ui/include/: ui.h
src/ui/sources/: ui.c
tests/unit_tests/: CMakeLists.txt  array_test.cpp  progression_finder_test.cpp
